added links for logout and login with google

--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,11 @@
   </head>
   <body>
     <h1>welcome to Node.js Security Example</h1>
+    <h3>Here is your secret:</h3>
+    <a href="/secret">show me!</a>
+    <br>
+    <a href="/auth/google">Google login</a>
+    <br>
+    <a href="/auth/logout">logout</a>
   </body>
 </html>
